feat: apply spotless on root project